# lunchbot4

./: .dev.vars.example  .env.example  .gitignore  Cargo.toml  go.mod  main.go  wrangler.toml
.github/workflows/: daily-menu.yml  deploy.yml
src/: config.rs  gemini.rs  lib.rs  main.rs  r2.rs  scrape.rs  slack.rs
