[package]
name = "lunchbot4"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.10", default-features = false }
base64 = "0.22"
regex = "1"
console_error_panic_hook = "0.1"
rand = "0.10"
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.release]
opt-level = "s"
lto = true
